tests/rosetta/out/Dart/checkpoint-synchronization-2.error
run error: exit status 254
../../tests/rosetta/out/Dart/checkpoint-synchronization-2.dart:7:56: Error: The argument type 'num' can't be assigned to the parameter type 'int?'.
    if (ch == upper.toString().substring(i, (i as num) + 1)) {
                                                       ^
../../tests/rosetta/out/Dart/checkpoint-synchronization-2.dart:8:55: Error: The argument type 'num' can't be assigned to the parameter type 'int?'.
      return lower.toString().substring(i, (i as num) + 1);
                                                      ^
../../tests/rosetta/out/Dart/checkpoint-synchronization-2.dart:10:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    i = (i as num) + 1;
                   ^
../../tests/rosetta/out/Dart/checkpoint-synchronization-2.dart:53:11: Error: Method not found: 'jsonEncode'.
    print(jsonEncode(v));
          ^^^^^^^^^^
../../tests/rosetta/out/Dart/checkpoint-synchronization-2.dart:82:5: Error: Undefined name 'stdout'.
    stdout.write('   test $name ...');
    ^^^^^^
../../tests/rosetta/out/Dart/checkpoint-synchronization-2.dart:87:9: Error: Undefined name 'stdout'.
        stdout.writeln(' ok (${_formatDuration(d)})');
        ^^^^^^
../../tests/rosetta/out/Dart/checkpoint-synchronization-2.dart:91:9: Error: Undefined name 'stdout'.
        stdout.writeln(' fail $e (${_formatDuration(d)})');
        ^^^^^^
